# tf-expr

./: Cargo.toml  README.md
examples/: simple_expression.rs  simple_feed.rs  xor.rs
src/: compiler.rs  data.rs  expr.rs  lib.rs  runtime.rs  tensordata.rs  val.rs  var.rs
src/expr/: binop.rs  compiler_scope.rs  constant.rs  fn0.rs  fn1.rs  fn2.rs  mod.rs  optimize.rs  placeholder.rs  read_variable.rs  variable.rs
src/v2/: binop.rs  constant.rs  fn1.rs  mod.rs  placeholder.rs
src/v3/: mod.rs
