[package]
name = "tf-expr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = "0.21.0"

[[example]]
name = "simple_expression"
crate-type = ["bin"]

[[example]]
name = "simple_feed"
crate-type = ["bin"]

[[example]]
name = "xor"
crate-type = ["bin"]
